Fixed horizontal scroll issue on layout page

--- a/pages/layout-garden/style.css
+++ b/pages/layout-garden/style.css
@@ -53,13 +53,14 @@
 /* class tat controls js artificial screen size */
 .screen {
     container-type: inline-size;
-    width: 100vw;
+    max-width: 100%;
     margin-left: auto;
     margin-right: auto;
   }
 
   .starbucks-container {
     container-type: inline-size;
+    width: 100%;
   }
 
 
@@ -84,7 +85,7 @@
         display: flex;
         flex-direction: row;
         align-items: flex-start;
-        gap: 10%;
+        gap: 50px;
     }
 
 }
